fix flex grid spacing

--- a/_sass/wiki-list.scss
+++ b/_sass/wiki-list.scss
@@ -4,6 +4,7 @@
 	list-style: none;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-around;
 	#wiki-li {
 		width: 300px;
 		margin: 20px;
